[tool.poetry]
name = "hydownloader"
version = "0.21.0"
description = "Download stuff like Hydrus does."
authors = ["thatfuckingbird"]
license = "AGPL-3.0-or-later"

[tool.poetry.scripts]
hydownloader-importer = "hydownloader.importer:main"
hydownloader-anchor-exporter = "hydownloader.anchor_exporter:main"
hydownloader-daemon = "hydownloader.daemon:main"
hydownloader-tools = "hydownloader.tools:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
bottle = "^0.12.21"
gallery-dl = "^1.22.1"
youtube_dl = "^2021.12.17"
yt-dlp = "^2022.5.18"
hydrus-api = "^3.22.7"
python-dateutil = "^2.8.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
